--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ pg_interval = "0.4.2"
 postgres-types = "0.2.6"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+
+[dev-dependencies]
+anyhow = "1.0.81"
